--- a/Piranhas/Views/Shared/_Layout.cshtml
+++ b/Piranhas/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("New Swimmer", "Create", "Swimmers")</li>
+                    <li>@Html.ActionLink("Manage Swimmers", "Index", "Swimmers")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
