Able to edit stroke preferences

--- a/Piranhas/Views/StrokePreferences/Index.cshtml
+++ b/Piranhas/Views/StrokePreferences/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-@model List<Piranhas.Models.StrokePreference>
+@model List<Piranhas.Models.SwimmerViewModel>
 <h2>Index</h2>
 
 <script type="text/javascript">
@@ -20,30 +20,20 @@
 
 <div class="bs-example">
     <ul class="nav nav-tabs">
-        @for (int i = 0; i < ViewBag.Swimmers.Count; i++)
+        @for (int i = 0; i < Model.Count; i++)
         {
-            <li @(i == 0 ? Html.Raw("class=\"active\"") : Html.Raw(""))>
-
-                <a data-toggle="tab" href="#section-@i">@ViewBag.Swimmers[@i].FirstName @ViewBag.Swimmers[@i].LastName</a>
+            <li @(i == ViewBag.Active ? Html.Raw("class=\"active\"") : Html.Raw(""))>
+                <a data-toggle="tab" href="#section-@i">@Model[i].Swimmer.FirstName @Model[i].Swimmer.LastName</a>
             </li>
         }
     </ul>
 
     <div class="tab-content">
-        @for (int i = 0; i < ViewBag.Swimmers.Count; i++)
+        @for (int i = 0; i < Model.Count; i++)
         {
-            <div id="section-@i" class="tab-pane fade in @(i == 0 ? Html.Raw("active") : Html.Raw(""))">
-                <h3>Section @i</h3>
-                @Html.DisplayNameFor(model => model[0].Backstroke)
-                @Html.CheckBoxFor(model => model[@i].Backstroke)
-                @Html.DisplayNameFor(model => model[0].Butterfly)
-                @Html.CheckBoxFor(model => model[@i].Butterfly)
-                @Html.DisplayNameFor(model => model[0].Breaststroke)
-                @Html.CheckBoxFor(model => model[@i].Breaststroke)
-                @Html.DisplayNameFor(model => model[0].Freestyle)
-                @Html.CheckBoxFor(model => model[@i].Freestyle)
-                @Html.DisplayNameFor(model => model[0].IndividualMedley)
-                @Html.CheckBoxFor(model => model[@i].IndividualMedley)
+            <div id="section-@i" class="tab-pane fade in @(i == ViewBag.Active ? Html.Raw("active") : Html.Raw(""))">
+                @Html.DisplayFor(model => model[i].StrokePreferenceViewModel.StrokePreference)
+                @Html.ActionLink("Edit", "Edit", new { id = Model[i].StrokePreferenceViewModel.StrokePreference.StrokePreferenceID, active = i }) 
             </div>
         }
     </div>
