--- a/Piranhas/Views/Shared/_Layout.cshtml
+++ b/Piranhas/Views/Shared/_Layout.cshtml
@@ -22,10 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Manage Swimmers", "Index", "Swimmers")</li>
-                    <li>@Html.ActionLink("Strokes", "Index", "StrokePreferences")</li>
+                    <li>@Html.ActionLink("Strokes", "Index", "StrokePreferences", new { active = 0 }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
