--- a/Piranhas/Views/Shared/_Layout.cshtml
+++ b/Piranhas/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Application name", "Index", "ArticleModels", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "ArticleModels")</li>
                     <li>@Html.ActionLink("Manage Swimmers", "Index", "Swimmers")</li>
                     <li>@Html.ActionLink("Strokes", "Index", "StrokePreferences", new { active = 0 }, null)</li>
                 </ul>
